update README and citable source

--- a/docs/.citation.md
+++ b/docs/.citation.md
@@ -1,2 +1,17 @@
 > **Note:**  
 > If you use `bbob-jax` in your research or in a scientific publication, it is appreciated that you cite the paper below:
+> 
+> **Zenodo** ([link](https://doi.org/10.5281/zenodo.17426894)):
+> ```bibtex
+> @software{vanderSchelling2025,
+>   title        = {Black-box optimization benchmarking (bbob) problem
+>                    set for JAX},
+>   author       = {van der Schelling, M.P.},
+>   month        = {nov},
+>   year         = {2025},
+>   publisher    = {Zenodo},
+>   version      = {v1.0.0},
+>   doi          = {10.5281/zenodo.17426894},
+>   url          = {https://doi.org/10.5281/zenodo.17426894},
+> }
+> ```
