--- a/docs/.citation.md
+++ b/docs/.citation.md
@@ -6,7 +6,7 @@
 > @software{vanderSchelling2025,
 >   title        = {Black-box optimization benchmarking (bbob) problem
 >                    set for JAX},
->   author       = {van der Schelling, M.P.},
+>   author       = {van der Schelling, M.P. and Bessa, M. A.},
 >   month        = {nov},
 >   year         = {2025},
 >   publisher    = {Zenodo},
